// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomIcon component when no props are provided should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-1 NatDSCustomIcon-root-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  />
</button>
`;

exports[`CustomIcon component when onIconPress property is provided should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-1 NatDSCustomIcon-root-3"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  />
</button>
`;
